# RealTime-Data-Compression-Simulator

./: .gitignore  000043_ODV_866634_V0.txt  000043_ODV_867601_V0.txt  000043_ODV_900612_V0.txt  B_Cmake.txt  B_main.txt  CMakeLists.txt  CompressorRunner.cpp  CompressorRunner.h  LZ4.cpp  LZ4.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Old_drhH.txt  Old_drhcpp.txt  Old_maincpp.txt  ResultsTableDialog.cpp  ResultsTableDialog.h  SensorPlotDialog.cpp  SensorPlotDialog.h  Simplified_dataset1.txt  Simplified_dataset2.txt  Simplified_dataset3.txt  compare.cpp  compare.h  compression_results.csv  compressor.cpp  compressor.h  compressor_factory.cpp  compressor_factory.h  compressor_interface.cpp  compressor_interface.h  data_input_simulation.txt  delta.cpp  delta.h  delta_huffman.cpp  delta_huffman.h  delta_lzw.cpp  delta_lzw.h  (+37 more)
lz4/: lz4.c  lz4.h
lzma/CPP/: UpgradeLog.htm
